IN PROGRESS - issue HREPTWO-2930: Tree sizing issues https://issues.onehippo.com/browse/HREPTWO-2930  - Set scrollbars to tree  - no wrapping for add-root label
svn path=/hippo-ecm/trunk/; revision=19462

--- a/cms/package/skin/src/main/webapp/screen.css
+++ b/cms/package/skin/src/main/webapp/screen.css
@@ -1209,4 +1209,5 @@ table.hippo-list-documents > tbody {
   margin: 0;
   padding:0;
   border:0;
+  white-space: nowrap;
 }
